--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,13 @@
     android:orientation="vertical"
     >
 
-    <android.support.v7.widget.RecyclerView
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search Activity"
+        android:textColor="@color/white"/>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/corona_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
